--- a/dsf-center-bet/pom.xml
+++ b/dsf-center-bet/pom.xml
@@ -18,5 +18,26 @@
       <groupId>com.invech.platform</groupId>
       <artifactId>dsf-center-dao</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.invech.platform</groupId>
+      <artifactId>dsf-center-data</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.invech.platform</groupId>
+      <artifactId>bet-platform</artifactId>
+    </dependency>
   </dependencies>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.invech.platform</groupId>
+        <artifactId>dsf-center</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
 </project>
