--- a/dsf-center-dao/pom.xml
+++ b/dsf-center-dao/pom.xml
@@ -12,5 +12,10 @@
   <artifactId>dsf-center-dao</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-
+  <dependencies>
+    <dependency>
+      <groupId>com.invech.platform</groupId>
+      <artifactId>dsf-center-data</artifactId>
+    </dependency>
+  </dependencies>
 </project>
