--- a/dsf-center-service/pom.xml
+++ b/dsf-center-service/pom.xml
@@ -27,4 +27,17 @@
       <artifactId>center-service-platform</artifactId>
     </dependency>
   </dependencies>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.invech.platform</groupId>
+        <artifactId>dsf-center</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
 </project>
