--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+
 	<groupId>com.invech.platform</groupId>
 	<artifactId>dsf-center</artifactId>
 	<version>1.0-SNAPSHOT</version>
@@ -21,27 +22,42 @@
 		<module>dsf-center-bet</module>
 		<module>dsf-center-dao</module>
 		<module>dsf-center-data</module>
-		<module>dsf-platform</module>
+		<module>dsf-modules</module>
 	</modules>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<dsf.center.dao.version>1.0-SNAPSHOT</dsf.center.dao.version>
 		<dsf.center.data.version>1.0-SNAPSHOT</dsf.center.data.version>
+		<dsf.modules.version>1.0-SNAPSHOT</dsf.modules.version>
 	</properties>
 
 	<dependencies>
-			<dependency>
-				<groupId>com.invech.platform</groupId>
-				<artifactId>dsf-center-dao</artifactId>
-				<version>${dsf.center.dao.version}</version>
-			</dependency>
+		<dependency>
+			<groupId>com.invech.platform</groupId>
+			<artifactId>dsf-center-dao</artifactId>
+			<version>${dsf.center.dao.version}</version>
+		</dependency>
 
-			<dependency>
-				<groupId>com.invech.platform</groupId>
-				<artifactId>dsf-center-data</artifactId>
-				<version>${dsf.center.data.version}</version>
-			</dependency>
+		<dependency>
+			<groupId>com.invech.platform</groupId>
+			<artifactId>dsf-center-data</artifactId>
+			<version>${dsf.center.data.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.invech.platform</groupId>
+			<artifactId>center-service-platform</artifactId>
+			<version>${dsf.modules.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.invech.platform</groupId>
+			<artifactId>bet-platform</artifactId>
+			<version>${dsf.modules.version}</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
