--- a/dsf-center-dao/pom.xml
+++ b/dsf-center-dao/pom.xml
@@ -17,5 +17,19 @@
       <groupId>com.invech.platform</groupId>
       <artifactId>dsf-center-data</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>tk.mybatis</groupId>
+      <artifactId>mapper-spring-boot-starter</artifactId>
+      <version>2.1.4</version>
+    </dependency>
   </dependencies>
 </project>
