--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,15 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<springboot.version>2.1.2.RELEASE</springboot.version>
 		<dsf.center.dao.version>1.0-SNAPSHOT</dsf.center.dao.version>
 		<dsf.center.data.version>1.0-SNAPSHOT</dsf.center.data.version>
 		<dsf.modules.version>1.0-SNAPSHOT</dsf.modules.version>
+		<fastjson.version>1.2.39</fastjson.version>
+		<okhttp.version>3.9.0</okhttp.version>
+		<druid.version>1.1.3</druid.version>
+		<lombok.version>1.16.18</lombok.version>
+		<swagger.version>2.7.0</swagger.version>
 	</properties>
 
 	<dependencies>
@@ -68,6 +74,57 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>${okhttp.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>${druid.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-bean-validators</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
+		<!--springcloud -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<version>${springboot.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
