--- a/dsf-center-dao/pom.xml
+++ b/dsf-center-dao/pom.xml
@@ -16,6 +16,7 @@
     <dependency>
       <groupId>com.invech.platform</groupId>
       <artifactId>dsf-center-data</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
