--- a/dsf-center-service/pom.xml
+++ b/dsf-center-service/pom.xml
@@ -17,14 +17,17 @@
     <dependency>
       <groupId>com.invech.platform</groupId>
       <artifactId>dsf-center-dao</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.invech.platform</groupId>
       <artifactId>dsf-center-data</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.invech.platform</groupId>
       <artifactId>center-service-platform</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
