--- a/dsf-center-service/pom.xml
+++ b/dsf-center-service/pom.xml
@@ -17,7 +17,11 @@
     <druid-version>1.1.3</druid-version>
     <swagger.version>2.7.0</swagger.version>
     <lombok.version>1.16.18</lombok.version>
+    <javax.version>2.3.0</javax.version>
+    <javax.activation.version>1.1.1</javax.activation.version>
+    <spring-cloud.version>Finchley.BUILD-SNAPSHOT</spring-cloud.version>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -112,18 +116,28 @@
       <scope>provided</scope>
     </dependency>
 
-  </dependencies>
+    <!--java11 移除javax-->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>${javax.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>${javax.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>${javax.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>${javax.activation.version}</version>
+    </dependency>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>com.invech.platform</groupId>
-        <artifactId>dsf-center</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+  </dependencies>
 
 </project>
