--- a/dsf-center-service/pom.xml
+++ b/dsf-center-service/pom.xml
@@ -82,6 +82,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.0-api</artifactId>
+      <version>1.0.0.Final</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.github.pagehelper</groupId>
       <artifactId>pagehelper-spring-boot-starter</artifactId>
       <version>1.2.1</version>
