--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,12 @@
 
 	<modules>
 		<module>dsf-center-service</module>
-		<module>dsf-center-bet</module>
+		<module>dsf-center-betlog</module>
 		<module>dsf-center-dao</module>
 		<module>dsf-center-data</module>
-		<module>dsf-modules</module>
+		<module>dsf-center-modules</module>
 		<module>erueka-server</module>
+		<module>dsf-center-summary</module>
 	</modules>
 
 	<properties>
@@ -32,6 +33,8 @@
 		<dsf.center.dao.version>1.0-SNAPSHOT</dsf.center.dao.version>
 		<dsf.center.data.version>1.0-SNAPSHOT</dsf.center.data.version>
 		<dsf.modules.version>1.0-SNAPSHOT</dsf.modules.version>
+		<dsf.center.service.version>1.0-SNAPSHOT</dsf.center.service.version>
+		<dsf.bet.version>1.0-SNAPSHOT</dsf.bet.version>
 		<fastjson.version>1.2.39</fastjson.version>
 		<okhttp.version>3.9.0</okhttp.version>
 		<druid.version>1.1.3</druid.version>
@@ -40,30 +43,6 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.invech.platform</groupId>
-			<artifactId>dsf-center-dao</artifactId>
-			<version>${dsf.center.dao.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.invech.platform</groupId>
-			<artifactId>dsf-center-data</artifactId>
-			<version>${dsf.center.data.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.invech.platform</groupId>
-			<artifactId>center-service-platform</artifactId>
-			<version>${dsf.modules.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.invech.platform</groupId>
-			<artifactId>bet-platform</artifactId>
-			<version>${dsf.modules.version}</version>
-		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
