center-service 微服务 对外的api

--- a/erueka-server/src/main/resources/application.yml
+++ b/erueka-server/src/main/resources/application.yml
@@ -7,6 +7,7 @@ server:
 eureka:
   instance:
     hostname: localhost
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
   client:
     register-with-eureka: false
     fetch-registry: false
