--- a/dsf-center-service/pom.xml
+++ b/dsf-center-service/pom.xml
@@ -20,9 +20,30 @@
         <dsf.center.dao.version>1.0-SNAPSHOT</dsf.center.dao.version>
         <dsf.center.data.version>1.0-SNAPSHOT</dsf.center.data.version>
         <dsf.modules.version>1.0-SNAPSHOT</dsf.modules.version>
+        <druid.version>1.1.10</druid.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.10</version>
+        </dependency>
+        <dependency>
+        <groupId>tk.mybatis</groupId>
+        <artifactId>mapper-spring-boot-starter</artifactId>
+        <version>2.1.4</version>
+        </dependency>
         <dependency>
             <groupId>com.invech.platform</groupId>
             <artifactId>dsf-center-dao</artifactId>
@@ -75,11 +96,11 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
-       <!-- <dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
