--- a/dsf-center-service/pom.xml
+++ b/dsf-center-service/pom.xml
@@ -21,9 +21,28 @@
         <dsf.center.data.version>1.0-SNAPSHOT</dsf.center.data.version>
         <dsf.modules.version>1.0-SNAPSHOT</dsf.modules.version>
         <druid.version>1.1.10</druid.version>
+        <swagger.version>2.7.0</swagger.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
