基本框架 springboot 2.X , tk.mabatis , mabatis, 数据库部分表 , 还差mycat

--- a/dsf-center-service/src/main/resources/application-dev.yml
+++ b/dsf-center-service/src/main/resources/application-dev.yml
@@ -57,6 +57,7 @@ mapper:
   not-empty: false
   identity: MYSQL
 
-#  swagger 开关
+#  swagger 开关 http://localhost:8089/swagger-ui.html
 swagger:
   profile: dev
+  scope: com.invech.platform.dsfcenterservice.controller
