强行修改保命带来的程序紊乱

--- a/dsf-center-service/src/main/resources/application-dev.yml
+++ b/dsf-center-service/src/main/resources/application-dev.yml
@@ -52,7 +52,7 @@ mybatis:
 
 mapper:
   mappers:
-    - com.invech.platform.dsfcenterdao.config.MyMapper
+    - com.invech.platform.dsfcenterdao.config.MybatisInterceptor
   style: normal
   not-empty: false
   identity: MYSQL
