--- a/dsf-center-service/src/main/resources/application-dev.yml
+++ b/dsf-center-service/src/main/resources/application-dev.yml
@@ -57,7 +57,16 @@ mapper:
   not-empty: false
   identity: MYSQL
 
+
 #  swagger 开关 http://localhost:8089/swagger-ui.html
 swagger:
   profile: dev
   scope: com.invech.platform.dsfcenterservice.controller
+
+logging:
+  level:
+    com:
+      dy:
+        springboot:
+          server:
+            mapper: debug
