--- a/dsf-center-service/pom.xml
+++ b/dsf-center-service/pom.xml
@@ -13,6 +13,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>dsf-center-service</name>
     <description>第三方服务</description>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -25,6 +26,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
