--- a/dsf-center-service/src/main/resources/application-dev.yml
+++ b/dsf-center-service/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.1.235:3306/dsf_center_rmi?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://192.168.1.235:3306/dsf_center_rmi2?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     password: abcd1234
     username: root
 #    username: ryan
