mybatis 配置文件改为 springboot 式的 yml redis 配置 mybatis 驼峰命名转下划线 ,下划线转驼峰

--- a/dsf-center-service/src/main/resources/application-dev.yml
+++ b/dsf-center-service/src/main/resources/application-dev.yml
@@ -59,14 +59,21 @@ eureka:
 
 mybatis:
   mapperLocations: classpath:mapper/**/*.xml
-  configLocation: classpath:mybatis.xml
+#  configLocation: classpath:mybatis.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+#    interceptors:
+#      - com.invech.platform.dsfcenterdao.config.MybatisInterceptor
 
 mapper:
   mappers:
-    - com.invech.platform.dsfcenterdao.config.MybatisInterceptor
-  style: normal
+    - com.invech.platform.dsfcenterdao.config.MybatisAutoMapper
+#驼峰转下划线
+  style: camelhumpandlowercase
   not-empty: false
   identity: MYSQL
+
 
 
 #  swagger 开关 http://localhost:8089/swagger-ui.html
