--- a/dsf-center-dao/pom.xml
+++ b/dsf-center-dao/pom.xml
@@ -19,6 +19,7 @@
         <java.version>1.8</java.version>
         <dsf.center.data.version>1.0-SNAPSHOT</dsf.center.data.version>
         <druid.version>1.1.10</druid.version>
+        <commons-pool2.version>2.6.0</commons-pool2.version>
     </properties>
 
     <dependencies>
@@ -89,6 +90,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
+        </dependency>
+
+
 
     </dependencies>
 
