--- a/dsf-center-service/pom.xml
+++ b/dsf-center-service/pom.xml
@@ -23,6 +23,7 @@
         <dsf.modules.version>1.0-SNAPSHOT</dsf.modules.version>
         <druid.version>1.1.10</druid.version>
         <swagger.version>2.7.0</swagger.version>
+        <commons-pool2.version>2.6.0</commons-pool2.version>
     </properties>
 
     <dependencies>
@@ -97,6 +98,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
