--- a/dsf-center-service/src/main/resources/application-dev.yml
+++ b/dsf-center-service/src/main/resources/application-dev.yml
@@ -6,8 +6,8 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/dsf_center_master?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-    password: xuyun1225
+    url: jdbc:mysql://192.168.1.235:3306/dsf_center_master?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    password: abcd1234
     username: root
 #    username: ryan
     druid:
@@ -44,7 +44,7 @@ spring:
       pool:
         max-active: 10
         min-idle: 1
-        max-wait: 300
+        max-wait: 1500ms
     database: 10
 
 eureka:
